; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_mbox_set_owner.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_mbox_set_owner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@ESP_THREAD_SAFE_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"set mbox=%p owner=%p\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sys_mbox_set_owner(%struct.TYPE_3__** %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__**, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__** %0, %struct.TYPE_3__*** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  %6 = icmp ne %struct.TYPE_3__** %5, null
  br i1 %6, label %7, label %21

7:                                                ; preds = %2
  %8 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %11, label %21

11:                                               ; preds = %7
  %12 = load i8*, i8** %4, align 8
  %13 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  store i8* %12, i8** %15, align 8
  %16 = load i32, i32* @ESP_THREAD_SAFE_DEBUG, align 4
  %17 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @LWIP_DEBUGF(i32 %16, i8* %19)
  br label %21

21:                                               ; preds = %11, %7, %2
  ret void
}

declare dso_local i32 @LWIP_DEBUGF(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
